tests/sksl/errors/ReservedNamePrecision.glsl
### Compilation failed:

error: 1: name 'precision' is reserved
int precision;
    ^^^^^^^^^
1 error
